[tool.poetry]
name = "dialog-lib"
version = "0.0.1.1"
description = ""
authors = ["Talkd.AI <foss@talkd.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "0.1.7"
SQLAlchemy = "^2.0.29"
click = "^8.1.7"
pgvector = "^0.2.5"
langchain-openai = "^0.0.6"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
dialog = "dialog.main:main"

[tool.poetry.scripts]
dialog = "dialog.main:main"